--- a/Views/Cars/Create.cshtml
+++ b/Views/Cars/Create.cshtml
@@ -228,6 +228,11 @@
                 <span asp-validation-for="Height" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Link" class="control-label"></label>
+                <input asp-for="Link" class="form-control" />
+                <span asp-validation-for="Link" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label for="password" class="control-label"></label>
                 <input name="password" class="form-control" />
             </div>
