--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -21,6 +21,10 @@
             <label for="range" class="control-label">Range</label>
             <input name="range" class="form-control" value=""/>
         </div>
+        <div class="form-group">
+            <label for="chargeTime" class="control-label">Charge time</label>
+            <input name="chargeTime" class="form-control" value="" />
+        </div>
         <div class="form-group" style="margin-top:10px">
             <input type="submit" value="Search" class="btn btn-primary" />
         </div>
