--- a/Views/Cars/Delete.cshtml
+++ b/Views/Cars/Delete.cshtml
@@ -18,7 +18,10 @@
             @Html.DisplayNameFor(model => model.Type)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Type)
+            @{
+                var separatedCarType = Model.Type.ToString().Replace("_", " ");
+            }
+            @separatedCarType
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Maker)
