--- a/Views/Cars/Details.cshtml
+++ b/Views/Cars/Details.cshtml
@@ -32,16 +32,17 @@
             @Html.DisplayFor(model => model.Model)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Range) (mi)
+            @Html.DisplayNameFor(model => model.Range)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Range)
+            @Html.DisplayFor(model => model.Range) miles
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FullPrice).Replace("FullPrice", "Full Price (£)")
+            @Html.DisplayNameFor(model => model.FullPrice).Replace("FullPrice", "Full Price")
+        </dt>
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FullPrice)
+            £@Html.DisplayFor(model => model.FullPrice)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Seats)
@@ -56,10 +57,10 @@
             @Html.DisplayFor(model => model.Made)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CargoVolume).Replace("CargoVolume", "Cargo Volume (L)")
+            @Html.DisplayNameFor(model => model.CargoVolume).Replace("CargoVolume", "Cargo Volume")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CargoVolume)
+            @Html.DisplayFor(model => model.CargoVolume) L
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RoofRails).Replace("RoofRails", "Roof Rails")
@@ -74,16 +75,16 @@
             @Html.DisplayFor(model => model.TowHitch)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TowWeight).Replace("TowWeight", "Tow Weight (Kg)")
+            @Html.DisplayNameFor(model => model.TowWeight).Replace("TowWeight", "Tow Weight")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TowWeight)
+            @Html.DisplayFor(model => model.TowWeight) Kg
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MaxPayload).Replace("MaxPayload", "Max Payload (Kg)")
+            @Html.DisplayNameFor(model => model.MaxPayload).Replace("MaxPayload", "Max Payload")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MaxPayload)
+            @Html.DisplayFor(model => model.MaxPayload) Kg
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Safety) (1-5)
@@ -92,22 +93,22 @@
             @Html.DisplayFor(model => model.Safety)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.BatteryCapacity).Replace("BatteryCapacity", "Battery Capacity (kWh)")
+            @Html.DisplayNameFor(model => model.BatteryCapacity).Replace("BatteryCapacity", "Battery Capacity ")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.BatteryCapacity)
+            @Html.DisplayFor(model => model.BatteryCapacity) kWh
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NormalChargePower).Replace("NormalChargePower", "Normal Charge Power (kw AC)")
+            @Html.DisplayNameFor(model => model.NormalChargePower).Replace("NormalChargePower", "Normal Charge Power")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NormalChargePower)
+            @Html.DisplayFor(model => model.NormalChargePower) kW AC
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NormalChargeTime).Replace("NormalChargeTime", "Normal Charge Time (mins)")
+            @Html.DisplayNameFor(model => model.NormalChargeTime).Replace("NormalChargeTime", "Normal Charge Time")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NormalChargeTime)
+            @Html.DisplayFor(model => model.NormalChargeTime) minutes
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NormalChargePort).Replace("NormalChargePort", "Normal Charge Port")
@@ -129,16 +130,16 @@
 
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FastChargePower).Replace("FastChargePower", "Fast Charge Power (kw AC)")
+            @Html.DisplayNameFor(model => model.FastChargePower).Replace("FastChargePower", "Fast Charge Power")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FastChargePower)
+            @Html.DisplayFor(model => model.FastChargePower) kw AC
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FastChargeTime).Replace("FastChargeTime", "Fast Charge Time (mins)")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FastChargeTime)
+            @Html.DisplayFor(model => model.FastChargeTime) minutes
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FastChargePort).Replace("FastChargePort", "Fast Charge Port")
@@ -159,34 +160,34 @@
             @separatedFastPortLocation
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TopSpeed).Replace("TopSpeed", "Top Speed (mph)")
+            @Html.DisplayNameFor(model => model.TopSpeed).Replace("TopSpeed", "Top Speed")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TopSpeed)
+            @Html.DisplayFor(model => model.TopSpeed)mph
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NaughtTo60).Replace("NaughtTo60", "0-60 (mins)")
+            @Html.DisplayNameFor(model => model.NaughtTo60).Replace("NaughtTo60", "0-60")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.NaughtTo60)
+            @Html.DisplayFor(model => model.NaughtTo60) seconds
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Efficiency) (Wh/mi)
+            @Html.DisplayNameFor(model => model.Efficiency)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Efficiency)
+            @Html.DisplayFor(model => model.Efficiency) Wh/mi
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalPower).Replace("TotalPower", "Total Power (hp)")
+            @Html.DisplayNameFor(model => model.TotalPower).Replace("TotalPower", "Total Power")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TotalPower)
+            @Html.DisplayFor(model => model.TotalPower) Horsepower
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalTorque).Replace("TotalTorque", "Total Torque (lb-ft)")
+            @Html.DisplayNameFor(model => model.TotalTorque).Replace("TotalTorque", "Total Torque")
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TotalTorque)
+            @Html.DisplayFor(model => model.TotalTorque) lb-ft
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Drive)
@@ -195,22 +196,22 @@
             @Html.DisplayFor(model => model.Drive)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Length) (mm)
+            @Html.DisplayNameFor(model => model.Length)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Length)
+            @Html.DisplayFor(model => model.Length)m
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Width) (mm)
+            @Html.DisplayNameFor(model => model.Width)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Width)
+            @Html.DisplayFor(model => model.Width)m
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Height) (mm)
+            @Html.DisplayNameFor(model => model.Height)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Height)
+            @Html.DisplayFor(model => model.Height)m
         </dd>
         <dt class="col-sm-2">
             <a href="@Html.DisplayFor(model => model.Link)" style=" font-weight: normal;">Website</a>
