--- a/Views/Cars/Search.cshtml
+++ b/Views/Cars/Search.cshtml
@@ -25,6 +25,16 @@
             <label for="chargeTime" class="control-label">Charge time</label>
             <input name="chargeTime" class="form-control" value="" />
         </div>
+        <div class="form-group">
+            <label for="sortBy" class="control-label">Sort By</label>
+            <select name="sortBy" class="form-control">
+                <option value="0">Default</option>
+                <option value="1">Maker</option>
+                <option value="2">Model</option>
+                <option value="3">Price: Low to High</option>
+                <option value="4">Price: High to Low</option>
+            </select>
+        </div>
         <div class="form-group" style="margin-top:10px">
             <input type="submit" value="Search" class="btn btn-primary" />
         </div>
